black bg on global body style to avoid having to stretch mods

--- a/global-styles.css
+++ b/global-styles.css
@@ -14,6 +14,7 @@ body {
   height  : 100%;
   overflow: auto;
   position: relative;
+  background: #000;
 }
 /* End iOS scroll bounce hack */
 
